# zhci

./: CMakeLists.txt  prj.conf  run.py
include/: app_offload.h  zhci_syscalls.h
scripts/: parse_syscalls.py
src/: kmain.c  main.c  offload.c
